contacts mobile view arrow z-index fix

--- a/css/templates.css
+++ b/css/templates.css
@@ -449,6 +449,7 @@ body {
     position: fixed;
     top: 48px;
     right: 16px;
+    z-index: 1;
 }
 
 .blueArrowToLeft:hover {
